2011-04-16  Paul Eggert  <eggert@cs.ucla.edu>

	* bitmaps: Change bitmaps from unsigned char back to the X11
	compatible char.  Avoid the old compiler warnings about
	out-of-range initializers by using, for example, '\xab' rather
	than 0xab.

	* xgselect.c (xgselect_initialize): Check vs interface
	even if ! (defined (USE_GTK) || defined (HAVE_GCONF)).

	* xmenu.c (xmenu_show): Rename parm to avoid shadowing.

	* xterm.c (x_create_toolkit_scroll_bar): Use const * for pointers
	to read-only memory.

	* fns.c (vector): Remove; this old hack is no longer needed.

	* xsmfns.c (create_client_leader_window): Rename shadowing arg.
	Remove unused var.
	(gdk_x11_set_sm_client_id) [!USE_GTK]: Don't define.

	* xrdb.c (x_load_resources): Omit unused local.

	* xfns.c (free_frame_menubar, atof): Remove duplicate decls.
	(x_window): Rename locals to avoid shadowing.
	(USG): Use the kludged USG macro, to pacify gcc.

	* xterm.c (x_alloc_nearest_color_for_widget): Remove; unused.
	(x_term_init): Remove local to avoid shadowing.

	* xfns.c, xterm.c (_XEditResCheckMessages): Protoize decl.

	* xdisp.c, dispextern.h (set_vertical_scroll_bar): Now extern if
	USE_TOOLKIT_SCROLL_BARS && !USE_GTK, as xterm.c needs it then.

2011-04-15  Paul Eggert  <eggert@cs.ucla.edu>

	* sysdep.c (emacs_read): Remove unnecessary check vs MAX_RW_COUNT.

	emacs_write: Accept and return EMACS_INT for sizes.
	See http://lists.gnu.org/archive/html/emacs-devel/2011-04/msg00514.html
	et seq.
	* gnutls.c, gnutls.h (emacs_gnutls_read, emacs_gnutls_write):
	Accept and return EMACS_INT.
	(emacs_gnutls_write): Return the number of bytes written on
	partial writes.
	* sysdep.c, lisp.h (emacs_read, emacs_write): Likewise.
	(emacs_read, emacs_write): Remove check for negative size, as the
	Emacs source code has been audited now.
	* sysdep.c (MAX_RW_COUNT): New macro, to work around kernel bugs.
	(emacs_read, emacs_write): Use it.
	* process.c (send_process): Adjust to the new signatures of